versioned_docs/version-2025.2.1/professor/jhones_donizetti_mendes.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Jhones Donizetti Mendes",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Geografia II - 623",
          "size": 2,
          "teachers": [
            "Jhones Donizetti Mendes",
            "Alexandre Roberto Valcarenghi"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Geografia I - 463",
          "size": 2,
          "teachers": [
            "Jhones Donizetti Mendes",
            "Alexandre Roberto Valcarenghi"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Geografia II - 1247",
          "size": 2,
          "teachers": [
            "Jhones Donizetti Mendes"
          ],
          "classroom": "sala_5",
          "students": [
            "IIW2023A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Trabalho de conclusão de curso I - 484",
          "size": 2,
          "teachers": [
            "Jhones Donizetti Mendes",
            "Karina Dias Espartosa"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "BIO_ESPECIAL_2"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Trabalho de conclusão de curso II - 1420",
          "size": 1,
          "teachers": [
            "Jhones Donizetti Mendes",
            "Karina Dias Espartosa"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "BIO_ESPECIAL_2"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": []
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Jhones Donizetti Mendes

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
